@@ -8,61 +8,7 @@
 		<artifactId>nabla-parent</artifactId>
 		<version>0.3.2-SNAPSHOT</version>
 	</parent>
-	<artifactId>nabla</artifactId>
-	<profiles>
-		<profile>
-			<id>jdk11-graalvm</id>
-			<activation>
-				<jdk>[11,</jdk>
-			</activation>
-			<properties>
-				<jar.dir>${project.build.directory}/jars</jar.dir>
-				<test.argLine>--upgrade-module-path='${jar.dir}/truffle-api.jar'
-					--add-opens org.graalvm.sdk/org.graalvm.polyglot=ALL-UNNAMED
-					--add-exports java.base/jdk.internal.module=ALL-UNNAMED</test.argLine>
-			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-dependency-plugin</artifactId>
-						<version>2.10</version>
-						<executions>
-							<execution>
-								<id>copy</id>
-								<phase>process-test-classes</phase>
-								<goals>
-									<goal>copy</goal>
-								</goals>
-								<configuration>
-									<artifactItems>
-										<artifactItem>
-											<groupId>org.graalvm.truffle</groupId>
-											<artifactId>truffle-api</artifactId>
-											<version>20.1.0</version>
-											<type>jar</type>
-											<overWrite>true</overWrite>
-											<destFileName>truffle-api.jar</destFileName>
-										</artifactItem>
-									</artifactItems>
-									<outputDirectory>${jar.dir}</outputDirectory>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk8-graalvm</id>
-			<activation>
-				<jdk>1.8</jdk>
-			</activation>
-			<properties>
-				<test.argLine>-XX:-UseJVMCIClassLoader</test.argLine>
-			</properties>
-		</profile>
-	</profiles>
+	<artifactId>fr.cea.nabla.interpreter</artifactId>
 	<build>
 		<plugins>
 			<plugin>
@@ -125,11 +71,9 @@
 			<plugins>
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.1</version>
+					<version>3.8.1</version>
 					<configuration>
 						<useIncrementalCompilation>false</useIncrementalCompilation>
-						<source>1.8</source>
-						<target>1.8</target>
 					</configuration>
 				</plugin>
 			</plugins>
@@ -180,19 +124,19 @@
 			<version>2.21.0</version>
 		</dependency>
 		<dependency>
-			<groupId>fr.cea.nabla</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>fr.cea.nabla</artifactId>
-			<version>${nablab.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>fr.cea.nabla</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>fr.cea.nabla.ir</artifactId>
-			<version>${nablab.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>fr.cea.nabla</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>fr.cea.nabla.javalib</artifactId>
-			<version>${nablab.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jgrapht</groupId>
